# PROGRAMMING

C++/P1/: main  main.cpp
Freelancing/: main.cpp
Programs C++/: Source.cpp
Programs C++/ArtificialIntelligenceAlgos/GeneticAlgorithm/: CMakeLists.txt  dump.txt  main.cpp
Programs C++/CLION/DSASSIGNMENT2/: CMakeLists.txt  main.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp
Programs C++/DSCODES_NAFEES/: avlnode.h  comparison  dfs.cpp  graphdfs.cpp  hashmap.h  heap.h  huffman.cpp  kruskal.py  prims.py
Programs C++/ICPC_MOCKUP/: CMakeLists.txt  main.cpp
Programs C++/StackUndoQuestion/: CMakeLists.txt  main  main.cpp
Programs C/TEST/: CMakeLists.txt  main.cpp
Programs Java/BookManagmentSystemLab-master/: pom.xml
Programs Java/ICPC_MOCKUP/: Q3REAL.txt  Q7REAL.txt  Q8REAL.txt
Programs Java/LEETCODE/: regularexpressionMatching.txt
Programs Java/P2/: dump.txt
Programs Java/SCD_ASSIGNMENTS/: SCD_ASSIGNMENTS_2.xzip
Programs Java/SCD_LABS/: SQLQuery.txt
Programs Java/SWINGTESTINGGROUNDS/: test.txt
Programs Python/OR_PROJECT_PULP/: main.py
Programs Python/OR_QUIZ/: main.py
Programs Python/SQE_ASSIGNMENT_2/: Q10.txt  Q1a.txt  Q1b.txt  Q1c.txt  Q2.txt  Q6.txt  Q7a.txt  Q7b.txt  Q9.txt  dataset 3 for sqe.xlsx  dataset1.csv  dataset2.csv  dataset3.csv  dataset3AModules.csv  dataset3AModules.csv~  dataset3CModules.csv  dataset3DModules.csv  dataset3WModules.csv  main.py
Programs VB/ConsoleApp1/: ConsoleApp1.sln  ConsoleApp1.vbproj  Program.vb
Programs_D/NafeesDemo/: .gitignore  (+1 more)
TESTING/: 5789.html  Q1.html  Q2.html  dummy.txt
Test/: main.cpp
(+448 files in other folders)
