cmake_minimum_required(VERSION 3.23)
project(DSASSIGNMENT2)

set(CMAKE_CXX_STANDARD 14)

add_executable(target1 DSASSIGNMENT2 main.cpp)
add_executable(target2 DSASSIGNMENT2 main1.cpp)
add_executable(target3 DSASSIGNMENT2 main2.cpp)
add_executable(target4 DSASSIGNMENT2 main3.cpp)
add_executable(target5 DSASSIGNMENT2 main4.cpp)